# big-data-nyc-taxi-mllib

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/adr/: 0001-pyspark-local-vs-cloud.md  0002-dataset-nyc-taxi.md  0003-objetivo-propina-baja.md  0004-algoritmos-comparados.md  0005-manejo-desbalance.md  0006-experimento-escalabilidad.md  README.md
notebooks/: 01_eda.ipynb  02_experiments.ipynb
output/: eda.json  results.json  scaling.json
paper/: IEEEtran.cls  main.tex  refs.bib
scripts/: build_notebooks.py  download_data.py  make_architecture.py  make_result_figures.py  make_slides.py  run_eda.py  run_experiments.py  run_strong_scaling.py
slides/: presentacion_big_data.pptx
src/nyc_taxi_mllib/: __init__.py  evaluate.py  features.py  ingest.py  models.py  scaling.py  spark_session.py
tests/: test_pipeline.py
