[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-taxi-mllib"
version = "1.0.0"
description = "Comparacion de clasificadores distribuidos (Spark MLlib) para prediccion de propina alta en viajes de taxi de NYC"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Niels Pacheco" }]
keywords = ["big-data", "spark", "mllib", "machine-learning", "nyc-taxi"]
dependencies = [
    "pyspark==3.5.3",
    "pandas",
    "pyarrow",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "nbconvert", "ipykernel"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
